--- a/CSS-2564-07-05.html
+++ b/CSS-2564-07-05.html
@@ -13,7 +13,15 @@
         body { font-style: italic; font-family: 'Times New Roman', 'Times New Roman', Times, serif;}
         #sub-desc { color:#ffaacc;}
     </style>
-    <link href="style.css" type="text/css">
+
+    <style> 
+        body { color:#ffaa33; font-family: 'Charmonman' , cursive; font-size: 3em; }
+        p { font-weight: normal; text-align: center;}
+        a { font: normal 2em;}
+    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Charmonman&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -22,10 +30,18 @@
         <p> Test CSS - under div </p>
         <a href="#"> Test  - link </a>
     </div>
+    <p id="description"> Test CSS - p
+        <div id="sub-desc"> Test CSS - under p</div>
+    </p>
 
+    <div class="title" style="color:#aabbcc; font-size: 24px;"> Test CSS - div  
+        <p> Test CSS - under div </p>
+        <a href="#"> Test  - link </a>
+    </div>
     <p id="description"> Test CSS - p
         <div id="sub-desc"> Test CSS - under p</div>
     </p>
     <a href="#"> Test CSS - link </a>
+    <DIV> ทดสอบภาษาไทย </DIV>
 </body>
 </html>
