--- a/html-2564-06-28.html
+++ b/html-2564-06-28.html
@@ -52,7 +52,6 @@
         <li> เฟอร์นิเจอร์ </li>
         <li> คอมพิวเตอร์ </li>
     </ol>
-
     <br>
     <ul type="circle"> ประเภทของสินค้า
         <li> เสื้อผ้า </li>
@@ -64,7 +63,6 @@
     <div> 
         มหาวิทยาลัยสงขลานครินทร์
     </div>
-
     <span> มหาวิทยาลัยสงขลานครินทร์ </span>
     <span> คณะวิทยาการจัดการ </span>
 
@@ -89,7 +87,7 @@
         </tr>
     </table>
 
-    <table boder="1"> 
+    <table border="1"> 
         <tr> 
             <td> # </td>
             <td> รหัสสินค้า </td>
