--- a/JAVA/do_while.html
+++ b/JAVA/do_while.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <from action="">
+        <label for="username"> User Name </label>
+        <input type="text" id="username" placeholder="User Name" >
+        <br>
+        <label for="password"> Password </label>
+        <input type="password" id="passwd" placeholder="Password" >
+        <br>
+        <input type="button" value="Log in" onclick="">
+        <input type="reset" value="Cancel" >
+    </from>
 
     <p id="demo" ></p>
     <script>
