--- a/HTML5/dialog.html
+++ b/HTML5/dialog.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        dialog {
+            border: 1px;
+            border-radius:6px;
+            box-shadow:0;
+        }
+    </style>
+    
 </head>
 <body>
 
